--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,3 +28,19 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: node ./tools/index.js
+    
+      - name: Gitee Pages Action
+      # You may pin to the exact commit or the version.
+      # uses: yanglbme/gitee-pages-action@a813811f52ed4f53010702a528b72053bd04685f
+        uses: yanglbme/gitee-pages-action@v1.2.6
+        with:
+          # The Gitee username, like yanglbme
+          gitee-username: tidys # optional
+          # The Gitee password
+          gitee-password: 3127111041 # optional
+          # The Gitee repository, like doocs/leetcode
+          gitee-repo:  doc
+          # Which branch to build
+          branch: master # optional, default is master
+          # Use force https or not
+          https: false # optional, default is true
