--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
         uses: wearerequired/git-mirror-action@master
         env:
             # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
-            SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+            SSH_PRIVATE_KEY: 11 #${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         with:
             # 注意替换为你的 GitHub 源仓库地址
             source-repo: "git@github.com:tidys/tidys.github.io.git"
