--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,9 +26,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        env: 
+          Key: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         run: 
           node ./tools/index.js
-          echo ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+          echo $Key
         
       - name: Sync to Gitee
         uses: wearerequired/git-mirror-action@master
