--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,18 +23,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        env: 
-          Key: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
-        run: 
-          echo $Key
-        
+ 
       - name: Sync to Gitee
         uses: wearerequired/git-mirror-action@master
         env:
-            SSH_PRIVATE_KEY: 11 #${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+            SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
         with:
             # 注意替换为你的 GitHub 源仓库地址
             source-repo: "git@github.com:tidys/tidys.github.io.git"
