--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,26 +24,26 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Sync to Gitee
-        uses: wearerequired/git-mirror-action@master
-        env:
-            SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
-        with:
-            # 注意替换为你的 GitHub 源仓库地址
-            source-repo: "git@github.com:tidys/tidys.github.io.git"
-            destination-repo: "git@gitee.com:tidys/doc.git"
+      # - name: Sync to Gitee
+      #   uses: wearerequired/git-mirror-action@master
+      #   env:
+      #       SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+      #   with:
+      #       # 注意替换为你的 GitHub 源仓库地址
+      #       source-repo: "git@github.com:tidys/tidys.github.io.git"
+      #       destination-repo: "git@gitee.com:tidys/doc.git"
 
-      - name: Gitee Pages Action
-      # uses: yanglbme/gitee-pages-action@a813811f52ed4f53010702a528b72053bd04685f
-        uses: yanglbme/gitee-pages-action@main
-        with:
-          # The Gitee username, like yanglbme
-          gitee-username: ${{ secrets.GITEE_REPO }} # optional
-          # The Gitee password
-          gitee-password: ${{ secrets.GITEE_PWD }} # optional
-          # The Gitee repository, like doocs/leetcode
-          gitee-repo:  tidys/doc
-          # Which branch to build
-          branch: master # optional, default is master
-          # Use force https or not
-          https: false # optional, default is true
+      # - name: Gitee Pages Action
+      # # uses: yanglbme/gitee-pages-action@a813811f52ed4f53010702a528b72053bd04685f
+      #   uses: yanglbme/gitee-pages-action@main
+      #   with:
+      #     # The Gitee username, like yanglbme
+      #     gitee-username: ${{ secrets.GITEE_REPO }} # optional
+      #     # The Gitee password
+      #     gitee-password: ${{ secrets.GITEE_PWD }} # optional
+      #     # The Gitee repository, like doocs/leetcode
+      #     gitee-repo:  tidys/doc
+      #     # Which branch to build
+      #     branch: master # optional, default is master
+      #     # Use force https or not
+      #     https: false # optional, default is true
